@@ -17,7 +17,8 @@
 <table class="editform editformsmall">
   <tr> 
     <th>Replacement image file:</th>
-    <td><input type="file" name="image" size="40" /><br />(leave blank to keep the current image)</td>
+    <td><input type="file" name="image" size="40" /><br />(leave blank to keep the current image)
+<:= eimage.thumb("geo", "editor") :></td>
      <td class="help"><:help image image:> <:error_img image:></td>
   </tr>
   <tr> 
